@@ -1,3 +1,9 @@
+2008-12-12  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclZlib.c, unix/configure.in: Added stubs to use when the
+	version of zlib is not capable enough, and automagic to detect when
+	that is the case.
+
 2008-12-12  Alexandre Ferrieux 	<ferrieux@users.sourceforge.net>
 
 	* unix/tclUnixNotfy.c  Fix missing CLOEXEC on internal pipes [2417695]
